--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "express-validator": "^7.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "@vercel/node": "^2.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
