--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/flowery
+MONGODB_URI=mongodb+srv://gwilinkosiyazi1:v34FQ0k4xFWyPec3@cluster0.1ccukxh.mongodb.net/flowery?retryWrites=true&w=majority
 JWT_SECRET=your_super_secret_jwt_key_here_make_it_very_long_and_secure
 JWT_EXPIRE=30d
 CLIENT_URL=http://localhost:3000
